# gazebo_video_monitors

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
gazebo_video_monitor_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_video_monitor_interfaces/srv/: SetCamera.srv  StartGmcmRecording.srv  StopRecording.srv
gazebo_video_monitor_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_video_monitor_msgs/srv/: SetCamera.srv  StartGmcmRecording.srv  StartGvmRecording.srv
gazebo_video_monitor_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
gazebo_video_monitor_plugins/include/gazebo_video_monitor_plugins/: camera_contains_plugin.h  gazebo_monitor_base_plugin.h  gazebo_multi_camera_monitor_plugin.h  gazebo_multi_video_monitor_plugin.h  gazebo_multi_view_monitor_plugin.h  gazebo_video_monitor_plugin.h  gvm_multicamera_bootstrapper_plugin.h
gazebo_video_monitor_plugins/include/gazebo_video_monitor_plugins/internal/: types.h  utils.h
gazebo_video_monitor_plugins/include/gazebo_video_monitor_plugins/sensors/: gvm_multicamera_sensor.h
gazebo_video_monitor_plugins/include/gazebo_video_monitor_plugins/utils/: box_marker_visualizer.h  gazebo_video_recorder.h
gazebo_video_monitor_plugins/src/: camera_contains_plugin.cpp  gazebo_multi_camera_monitor_plugin.cpp  gazebo_multi_video_monitor_plugin.cpp  gazebo_multi_view_monitor_plugin.cpp  gazebo_video_monitor_plugin.cpp  gvm_multicamera_bootstrapper_plugin.cpp
gazebo_video_monitor_plugins/src/sensors/: gvm_multicamera_sensor.cpp
gazebo_video_monitor_plugins/src/utils/: box_marker_visualizer.cpp  gazebo_video_recorder.cpp
gazebo_video_monitor_plugins/test/launch/: gazebo_multi_camera_monitor_plugin.launch.xml  gazebo_multi_camera_monitor_plugin.test  gazebo_multi_video_monitor_plugin.launch.xml  gazebo_multi_video_monitor_plugin.test  gazebo_multi_view_monitor_plugin.launch.xml  gazebo_video_monitor_plugin.launch.xml
gazebo_video_monitor_plugins/test/worlds/: gazebo_multi_video_monitor_plugin.world  gazebo_multi_view_monitor_plugin.world  gazebo_video_monitor_plugin.world
gazebo_video_monitor_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.cfg  setup.py
gazebo_video_monitor_utils/gazebo_video_monitor_utils/: wait_for_model.py
gazebo_video_monitor_utils/scripts/: wait_for_model
gazebo_video_monitors/: CHANGELOG.rst  CMakeLists.txt  package.xml
include/gazebo_video_monitor_plugins/: camera_contains_plugin.h  gazebo_monitor_base_plugin.h  gazebo_multi_camera_monitor_plugin.h  gazebo_multi_video_monitor_plugin.h  gazebo_multi_view_monitor_plugin.h  gazebo_video_monitor_plugin.h  gvm_multicamera_bootstrapper_plugin.h
include/gazebo_video_monitor_plugins/internal/: types.h  utils.h
include/gazebo_video_monitor_plugins/sensors/: gvm_multicamera_sensor.h
include/gazebo_video_monitor_plugins/utils/: box_marker_visualizer.h  gazebo_video_recorder.h
src/: camera_contains_plugin.cpp  gazebo_monitor_base_plugin.cpp  gazebo_multi_camera_monitor_plugin.cpp  gazebo_multi_video_monitor_plugin.cpp  gazebo_multi_view_monitor_plugin.cpp  gazebo_video_monitor_plugin.cpp  gvm_multicamera_bootstrapper_plugin.cpp
src/sensors/: gvm_multicamera_sensor.cpp
src/utils/: box_marker_visualizer.cpp  gazebo_video_recorder.cpp
srv/: SetCamera.srv  StartGmcmRecording.srv  StartGvmRecording.srv  StartRecording.srv
test/launch/: example.test  gazebo_multi_view_monitor_plugin.test  gazebo_video_monitor_plugin.test
test/worlds/: example.world  gazebo_multi_camera_monitor_plugin.world  gazebo_video_monitor_plugin.world
