<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_video_monitor_interfaces</name>
  <version>0.8.1</version>
  <description>
    gazebo_video_monitor_interfaces defines interfaces for the gazebo_video_monitor_plugins package.
  </description>

  <maintainer email="info@nlamprian.me">Nick Lamprianidis</maintainer>
  <license>GPLv3</license>
  <author email="info@nlamprian.me">Nick Lamprianidis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  
  <depend>builtin_interfaces</depend>
  <depend>std_srvs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
