<?xml version="1.0"?>
<package format="2">
  <name>gazebo_video_monitor_msgs</name>
  <version>0.7.0</version>
  <description>
    gazebo_video_monitor_msgs defines interfaces for the gazebo_video_monitor_plugins package.
  </description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
