<?xml version="1.0"?>
<package format="2">
  <name>gazebo_video_monitor_utils</name>
  <version>0.7.0</version>
  <description>
    gazebo_video_monitor_utils contains utility scripts that are meant to interact with the gazebo video monitor plugins.
  </description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_srvs</exec_depend>
</package>
