<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_video_monitor_utils</name>
  <version>0.8.1</version>
  <description>
    Contains utility scripts that are meant to interact with the gazebo video monitor plugins.
  </description>

  <maintainer email="info@nlamprian.me">Nick Lamprianidis</maintainer>
  <license>GPLv3</license>
  <author email="info@nlamprian.me">Nick Lamprianidis</author>

  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
