<?xml version="1.0"?>
<package format="2">
  <name>gazebo_video_monitors</name>
  <version>0.7.0</version>
  <description>
    Metapackage that groups together the gazebo_video_monitors packages.
  </description>

  <author email="nlamprian@gmail.com">Nick Lamprianidis</author>
  <maintainer email="nlamprian@gmail.com">Nick Lamprianidis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_video_monitor_msgs</exec_depend>
  <exec_depend>gazebo_video_monitor_plugins</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
