<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_video_monitors</name>
  <version>0.8.0</version>
  <description>
    Metapackage that groups together the gazebo_video_monitors packages.
  </description>

  <maintainer email="info@nlamprian.me">Nick Lamprianidis</maintainer>
  <license>GPLv3</license>
  <author email="info@nlamprian.me">Nick Lamprianidis</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_video_monitor_interfaces</exec_depend>
  <exec_depend>gazebo_video_monitor_plugins</exec_depend>
  <exec_depend>gazebo_video_monitor_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
